--- a/TravelBook/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/TravelBook/Base.lproj/Main.storyboard
@@ -17,27 +17,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ywn-cs-Vw2">
+                                <rect key="frame" x="74" y="92" width="245" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k4V-DL-u75">
+                                <rect key="frame" x="74" y="152" width="245" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-E4-LJU">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="224" width="393" height="579"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gGa-E4-LJU" secondAttribute="bottom" id="77P-1b-x0z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gGa-E4-LJU" secondAttribute="trailing" id="Qgp-gQ-7nV"/>
-                            <constraint firstItem="gGa-E4-LJU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cMx-om-Vzg"/>
-                            <constraint firstItem="gGa-E4-LJU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fiF-Ja-wPF"/>
+                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="leading" secondItem="k4V-DL-u75" secondAttribute="leading" id="DJm-OR-ycH"/>
+                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="74" id="Gb2-EL-cG2"/>
+                            <constraint firstItem="gGa-E4-LJU" firstAttribute="top" secondItem="k4V-DL-u75" secondAttribute="bottom" constant="38" id="LFl-gw-f0G"/>
+                            <constraint firstItem="gGa-E4-LJU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="X4k-8N-zv5"/>
+                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZWS-ZG-fmU"/>
+                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="gDS-xx-QS6"/>
+                            <constraint firstItem="Ywn-cs-Vw2" firstAttribute="trailing" secondItem="k4V-DL-u75" secondAttribute="trailing" id="iyF-OL-e34"/>
+                            <constraint firstItem="k4V-DL-u75" firstAttribute="centerX" secondItem="gGa-E4-LJU" secondAttribute="centerX" id="pV4-Q4-IPr"/>
+                            <constraint firstItem="k4V-DL-u75" firstAttribute="top" secondItem="Ywn-cs-Vw2" secondAttribute="bottom" constant="26" id="pZZ-Ug-wv7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gGa-E4-LJU" secondAttribute="bottom" constant="15" id="rfD-dz-XiS"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="commentText" destination="k4V-DL-u75" id="3Ll-8I-WT2"/>
                         <outlet property="mapView" destination="gGa-E4-LJU" id="pIA-kZ-Q1z"/>
+                        <outlet property="nameText" destination="Ywn-cs-Vw2" id="cFr-VD-544"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="4"/>
+            <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
