--- a/TravelBook/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/TravelBook/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="per-3f-KnM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -9,6 +9,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--List View Controller-->
+        <scene sceneID="y35-92-vVA">
+            <objects>
+                <viewController id="Lt9-Lk-uWG" customClass="ListViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EkK-kg-HyV">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d9v-1Q-icW">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nc2-28-MqP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nc2-28-MqP" firstAttribute="bottom" secondItem="d9v-1Q-icW" secondAttribute="bottom" id="4Kv-la-44w"/>
+                            <constraint firstItem="nc2-28-MqP" firstAttribute="trailing" secondItem="d9v-1Q-icW" secondAttribute="trailing" id="lAF-pt-yoO"/>
+                            <constraint firstItem="d9v-1Q-icW" firstAttribute="leading" secondItem="nc2-28-MqP" secondAttribute="leading" id="wz9-kX-Xqq"/>
+                            <constraint firstItem="d9v-1Q-icW" firstAttribute="top" secondItem="nc2-28-MqP" secondAttribute="top" id="yCr-NQ-Fwf"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="QnM-uI-tLK"/>
+                    <connections>
+                        <outlet property="tableView" destination="d9v-1Q-icW" id="5AX-0c-Ess"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toViewController" id="iou-L1-zMZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VvD-Vi-ttQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="252.67175572519082" y="3.5211267605633805"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,17 +50,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ywn-cs-Vw2">
-                                <rect key="frame" x="74" y="92" width="245" height="34"/>
+                                <rect key="frame" x="74" y="136" width="245" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k4V-DL-u75">
-                                <rect key="frame" x="74" y="152" width="245" height="34"/>
+                                <rect key="frame" x="74" y="196" width="245" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-E4-LJU">
-                                <rect key="frame" x="0.0" y="224" width="393" height="532"/>
+                                <rect key="frame" x="0.0" y="268" width="393" height="488"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYv-B1-Ibg">
@@ -57,6 +89,7 @@
                             <constraint firstItem="gGa-E4-LJU" firstAttribute="centerX" secondItem="PYv-B1-Ibg" secondAttribute="centerX" id="wR4-g5-fEd"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zmZ-ri-hxC"/>
                     <connections>
                         <outlet property="commentText" destination="k4V-DL-u75" id="3Ll-8I-WT2"/>
                         <outlet property="mapView" destination="gGa-E4-LJU" id="pIA-kZ-Q1z"/>
@@ -65,7 +98,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="1061.8320610687022" y="3.5211267605633805"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="AC5-wm-bwz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="per-3f-KnM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bww-gg-WtB">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Lt9-Lk-uWG" kind="relationship" relationship="rootViewController" id="6rP-T8-ydh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qqn-Qy-Hf3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-674.04580152671758" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
