--- a/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
+++ b/InstaCloneFirebase/InstaCloneFirebase/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
         <!--Upload-->
         <scene sceneID="QB6-cG-Osv">
             <objects>
-                <viewController id="pt2-Fr-77e" sceneMemberID="viewController">
+                <viewController id="pt2-Fr-77e" customClass="UploadViewController" customModule="InstaCloneFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eXw-9I-j1I">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -81,12 +81,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ylw-iK-9eB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-712" y="675"/>
+            <point key="canvasLocation" x="-712" y="101"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="F2U-qR-bwv">
+            <objects>
+                <viewController id="7nO-qF-MqV" customClass="SettingsViewController" customModule="InstaCloneFirebase" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S3Q-O9-swM">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sFd-jD-8cl">
+                                <rect key="frame" x="119" y="372" width="155" height="109"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                                <connections>
+                                    <action selector="logoutClicked:" destination="7nO-qF-MqV" eventType="touchUpInside" id="gOQ-y4-Jtm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eM0-kf-1BH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="s.circle" catalog="system" id="mzT-Bm-MjG"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="toViewController" modalPresentationStyle="fullScreen" id="cy7-yp-XjP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uia-ED-on0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-712.2137404580152" y="833.80281690140851"/>
         </scene>
         <!--Feed-->
         <scene sceneID="mkG-Fe-Jb7">
             <objects>
-                <viewController id="faW-8H-ZaR" sceneMemberID="viewController">
+                <viewController id="faW-8H-ZaR" customClass="FeedViewController" customModule="InstaCloneFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OQx-XT-lWv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IyH-Vu-9jQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-712" y="-205"/>
+            <point key="canvasLocation" x="-712" y="-584"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="hDd-vZ-5EB">
@@ -112,6 +142,7 @@
                     <connections>
                         <segue destination="faW-8H-ZaR" kind="relationship" relationship="viewControllers" id="fqy-Lr-D5n"/>
                         <segue destination="pt2-Fr-77e" kind="relationship" relationship="viewControllers" id="1uz-HN-1Ri"/>
+                        <segue destination="7nO-qF-MqV" kind="relationship" relationship="viewControllers" id="4lr-Eu-0yw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QqK-8o-QMt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -121,6 +152,7 @@
     </scenes>
     <resources>
         <image name="f.cursive.circle" catalog="system" width="128" height="123"/>
+        <image name="s.circle" catalog="system" width="128" height="123"/>
         <image name="u.circle" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
