--- a/SnapchatClone/SnapchatClone/Base.lproj/Main.storyboard
+++ b/SnapchatClone/SnapchatClone/Base.lproj/Main.storyboard
@@ -97,6 +97,14 @@
                     <view key="view" contentMode="scaleToFill" id="RI4-BE-cIc" customClass="SettingsVC" customModule="SnapchatClone" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnD-lN-xgi">
+                                <rect key="frame" x="158" y="409" width="78" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="2VW-hc-g15"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
